[iOS] Clear UIProcess visual state after WebProcess crash https://bugs.webkit.org/show_bug.cgi?id=133664 <rdar://problem/16952742>

Reviewed by Benjamin Poulain.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _didRelaunchProcess]):
* UIProcess/API/Cocoa/WKWebViewPrivate.h:
* UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::didRelaunchProcess):
* UIProcess/mac/RemoteLayerTreeHost.h:
* UIProcess/mac/RemoteLayerTreeHost.mm:
(WebKit::RemoteLayerTreeHost::~RemoteLayerTreeHost):
(WebKit::RemoteLayerTreeHost::clearLayers):

Canonical link: https://commits.webkit.org/151749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169851 268f45cc-cd09-0410-ab3c-d52691b4dbfc