Source/WebKit2/UIProcess/ios/PageClientImplIOS.mm
@@ -151,6 +151,7 @@ void PageClientImpl::processDidExit()
 void PageClientImpl::didRelaunchProcess()
 {
     [m_contentView _didRelaunchProcess];
+    [m_webView _didRelaunchProcess];
 }
 
 void PageClientImpl::pageClosed()
